add swagger.json route
